modified:   2D_try/EAM/coni_t1.ipynb 	modified:   2D_try/EAM/coni_t1_md.py

--- a/2D_try/EAM/coni_t1.ipynb
+++ b/2D_try/EAM/coni_t1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,10 +464,10 @@
     "        return \n",
     "\n",
     "\n",
-    "def train(model, path_save, dt, temp_given, alpha, device=None, n = 1000):\n",
+    "def train(model_, path_save, dt, temp_given, alpha, device=None, n = 1000):\n",
     "\n",
     "    writer = SummaryWriter(log_dir = path_save)\n",
-    "    length = len(model.weights)\n",
+    "    length = len(model_.weights)\n",
     "    k_b = constants.k\n",
     "    ev_j = constants.physical_constants['atomic unit of charge'][0]\n",
     "    ''' \n",
@@ -479,28 +479,28 @@
     "\n",
     "    for i in range(n):\n",
     "        #* Step 1\n",
-    "        model.grad_calc()\n",
-    "        model.acc_list *= (ev_j*1e20) #* eV -> J\n",
+    "        model_.grad_calc()\n",
+    "        model_.acc_list *= (ev_j*1e20) #* eV -> J\n",
     "        with torch.no_grad():\n",
-    "            model.weights += (model.v_list*dt + 1/2*model.acc_list*dt**2) #* x-step\n",
-    "        model.v_list += 1/2*model.acc_list*dt\n",
-    "        model.v_list -= torch.sum(model.v_list, 0)/length\n",
+    "            model_.weights += (model_.v_list*dt + 1/2*model_.acc_list*dt**2) #* x-step\n",
+    "        model_.v_list += 1/2*model_.acc_list*dt\n",
+    "        model_.v_list -= torch.sum(model_.v_list, 0)/length\n",
     "\n",
     "        #* Step 2\n",
-    "        model.grad_calc()\n",
-    "        model.acc_list *= (ev_j*1e20)\n",
-    "        model.v_list += 1/2*model.acc_list*dt\n",
-    "        model.v_list -= torch.sum(model.v_list, 0)/length\n",
-    "        k_e_ = 1/2*torch.sum(model.mass.reshape(-1,1)*(model.v_list*1e-10)**2)\n",
+    "        model_.grad_calc()\n",
+    "        model_.acc_list *= (ev_j*1e20)\n",
+    "        model_.v_list += 1/2*model_.acc_list*dt\n",
+    "        model_.v_list -= torch.sum(model_.v_list, 0)/length\n",
+    "        k_e_ = 1/2*torch.sum(model_.mass.reshape(-1,1)*(model_.v_list*1e-10)**2)\n",
     "        temp_ = k_e_/(3/2*(length-1))/k_b\n",
     "\n",
-    "        writer.add_scalar(\"Potential energy\", model.e_total, i)\n",
+    "        writer.add_scalar(\"Potential energy\", model_.e_total, i)\n",
     "        writer.add_scalar(\"Kinetic energy\", k_e_/ev_j, i)\n",
     "        writer.add_scalar(\"Temperature\", temp_, i)\n",
     "\n",
     "        if i%100 == 0:\n",
     "            s_adjust = torch.sqrt((temp_given+(temp_-temp_given)*alpha)/temp_)\n",
-    "            model.v_list *= s_adjust\n",
+    "            model_.v_list *= s_adjust\n",
     "\n",
     "            # clear_output(True)\n",
     "\n",
